--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-questions.xlsx
+questions_rows.csv
 DanielMon.svg
 DanielMonOpen.svg
 API_keys.txt
 somando-405619-80ae7ba12201.json
-questions.json
 .env
